# Comcom

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main_recv.cpp  main_send.cpp
lib/: CMakeLists.txt  Comcom.hpp  SharedMemoryCommunicator.cpp
